tests/errors/syn.invalid-default.compile-time-param.or
main :: () -> void {
    add :: (!a := 0; b := 0) -> int {
        return a + b;
    };
};
